--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flexerr-backend",
-  "version": "1.0.1",
+  "version": "1.1.0-beta",
   "description": "Flexerr - Media Request & Lifecycle Manager API",
   "main": "server.js",
   "scripts": {
@@ -10,6 +10,7 @@
   },
   "keywords": [
     "plex",
+    "jellyfin",
     "media",
     "sonarr",
     "radarr",
