Code audit fixes and documentation
- Fix: Add missing imdb_id column migration to watchlist table
- Add comprehensive AUDIT_LOG.md documenting code review findings
- Update .gitignore to track AUDIT_LOG.md

--- a/.gitignore
+++ b/.gitignore
@@ -42,10 +42,11 @@ docker-compose.override.yml
 coverage/
 .nyc_output/
 
-# Documentation (keep only README and CHANGELOG)
+# Documentation (keep only README, CHANGELOG, and AUDIT_LOG)
 *.md
 !README.md
 !CHANGELOG.md
+!AUDIT_LOG.md
 
 # Development files
 flexerr/
