--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,13 +21,26 @@ services:
       timeout: 10s
       retries: 3
       start_period: 10s
-    # Optional: GPU access for hardware-accelerated video conversion
-    # Uncomment if using Auto Convert feature with AMD/Intel GPU
+
+    # ============================================
+    # GPU ACCESS FOR HARDWARE-ACCELERATED ENCODING
+    # ============================================
+    # Uncomment ONE of the following GPU configurations:
+
+    # --- NVIDIA GPU (RTX/GTX cards with NVENC) ---
+    # Requires: NVIDIA Container Toolkit installed on host
+    # Install: https://docs.nvidia.com/datacenter/cloud-native/container-toolkit/install-guide.html
+    # runtime: nvidia
+    # environment:
+    #   - NVIDIA_VISIBLE_DEVICES=all
+    #   - NVIDIA_DRIVER_CAPABILITIES=compute,video,utility
+
+    # --- AMD/Intel GPU (VAAPI) ---
     # devices:
     #   - /dev/dri:/dev/dri
     # group_add:
     #   - "44"   # video group
-    #   - "107"  # render group (may vary by system)
+    #   - "107"  # render group (may vary by system, check: getent group render)
 
 volumes:
   flexerr-data:
