--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flexerr-frontend",
-  "version": "1.0.0",
+  "version": "1.1.5-beta",
   "description": "Flexerr - Media Request & Lifecycle Manager Frontend",
   "private": true,
   "dependencies": {
