Exclude .env files from Docker build context
Previously .dockerignore only excluded .env.local and .env.development,
allowing .env files to be baked into the Docker image at build time.
Now all .env files are excluded.

--- a/.dockerignore
+++ b/.dockerignore
@@ -29,7 +29,10 @@ data
 !README.md
 docs
 
+# Environment files (secrets)
+.env
+.env.*
+!.env.example
+
 # Development
-.env.local
-.env.development
 docker-compose.override.yml
